--- a/marketplace-kampsewa/composer.json
+++ b/marketplace-kampsewa/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "midtrans/midtrans-php": "^2.5",
-        "realrashid/sweet-alert": "^7.1"
+        "realrashid/sweet-alert": "^7.1",
+        "stevebauman/location": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
